--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==1.1.0
 Flask-Cors==3.0.10
 flask-ngrok==0.0.25
 flask-restplus==0.13.0
+Flask-SQLAlchemy==2.5.1
 scikit-image==0.16.2
 scikit-learn==0.24.2
 scikit-video==1.1.11
